SFDC Automation/src/objects/HQ_Visit__c.object
<CustomObject>
    <description>Control the process to schedule customers and prospects visits to HQ.</description>
    <fields>
        <fullName>Account_Manager_Phone__c</fullName>
        <formula>Company_Name__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Phone#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Company_Name__r.Owner.FirstName &amp;&apos; &apos;&amp; Company_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <formula>Company_Name__r.Owner.Manager.FirstName&amp;&apos; &apos;&amp;Company_Name__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>CASE(Company_Name__r.Type , &quot;Customer&quot;, &quot;Customer&quot;, &quot;Prospect&quot;, &quot;Prospect&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Challenges__c</fullName>
        <label>WHAT business challenges are there?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <formula>Company_Name__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Anniversary_Date__c</fullName>
        <formula>Company_Name__r.CO_RYDER_ANNSRY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_City_State__c</fullName>
        <formula>Company_Name__r.ShippingCity &amp; &quot;, &quot;&amp;&quot; &quot;&amp;Company_Name__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company City, State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Executive_Visits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_ZipCode__c</fullName>
        <formula>Company_Name__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company ZipCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Objetive__c</fullName>
        <label>WHAT is the customer’s objective(s)?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deliverables_Expected__c</fullName>
        <label>WHAT deliverables are expected?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Reason_for_Declined__c</fullName>
        <description>Describe Reason for Declined</description>
        <label>Describe Reason for Declined</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Month_Fixed_Cost__c</fullName>
        <formula>Company_Name__r.FSL_Last_12_Months_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Month_Rated_Cost__c</fullName>
        <formula>Company_Name__r.FSL_Last_12_Months_Rated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_FC__c</fullName>
        <formula>IF(FSL_Last_12_month_revenue__c!=0, FSL_Last_12_Month_Fixed_Cost__c /  FSL_Last_12_month_revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months-FC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Fixed_Cost__c</fullName>
        <label>FSL - Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_RC__c</fullName>
        <formula>IF(FSL_Last_12_month_revenue__c!=0, FSL_Last_12_Month_Rated_Cost__c /  FSL_Last_12_month_revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months-RC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Rated_Cost__c</fullName>
        <label>FSL - Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_Months_Revenue__c</fullName>
        <label>FSL - Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_month_revenue__c</fullName>
        <formula>Company_Name__r.Last_12_months_FSL_revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_months_margin_Per__c</fullName>
        <formula>IF(FSL_Last_12_month_revenue__c!=0, (1-((FSL_Last_12_Month_Fixed_Cost__c +  FSL_Last_12_Month_Rated_Cost__c )/ FSL_Last_12_month_revenue__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Last_12_months_margin__c</fullName>
        <formula>FSL_Last_12_month_revenue__c - ( FSL_Last_12_Month_Fixed_Cost__c +  FSL_Last_12_Month_Rated_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Last 12 Months - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_FC__c</fullName>
        <formula>IF(FSL_Life_to_Date_Revenues__c!=0, FSL_Life_to_Date_Fix_Cost__c /  FSL_Life_to_Date_Revenues__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - FC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Fix_Cost__c</fullName>
        <formula>Company_Name__r.FSL_Life_to_Date_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Fixed_Cost__c</fullName>
        <label>FSL - Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Margin_Per__c</fullName>
        <formula>IF(FSL_Life_to_Date_Revenues__c!=0, (1-(( FSL_Life_to_Date_Fix_Cost__c  +  FSL_Life_to_Date_Rate_Cost__c)/ FSL_Life_to_Date_Revenues__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Margin__c</fullName>
        <formula>FSL_Life_to_Date_Revenues__c - (FSL_Life_to_Date_Fix_Cost__c +  FSL_Life_to_Date_Rate_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_RC__c</fullName>
        <formula>IF(FSL_Life_to_Date_Revenues__c!=0, FSL_Life_to_Date_Rate_Cost__c /  FSL_Life_to_Date_Revenues__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - RC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Rate_Cost__c</fullName>
        <formula>Company_Name__r.FSL_Life_to_Date_Rated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Rated_Cost__c</fullName>
        <label>FSL - Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Revenue__c</fullName>
        <label>FSL - Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Life_to_Date_Revenues__c</fullName>
        <formula>Company_Name__r.FSL_Life_to_Date_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL - Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Month_Fixed_Cost__c</fullName>
        <formula>Company_Name__r.Last_12_Months_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Month_Rated_Cost__c</fullName>
        <formula>Company_Name__r.Last_12_Months_Rated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Month_Revenue__c</fullName>
        <formula>Company_Name__r.Last_12_Months_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_FC__c</fullName>
        <formula>IF(AND(Last_12_Month_Fixed_Cost__c != null,Last_12_Month_Revenue__c != null,Last_12_Month_Fixed_Cost__c != 0,Last_12_Month_Revenue__c != 0) , Last_12_Month_Fixed_Cost__c / Last_12_Month_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months-FC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Fixed_Cost__c</fullName>
        <label>Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_RC__c</fullName>
        <formula>IF(AND(Last_12_Month_Rated_Cost__c != null,Last_12_Month_Revenue__c != null,Last_12_Month_Rated_Cost__c != 0,Last_12_Month_Revenue__c != 0) , Last_12_Month_Rated_Cost__c / Last_12_Month_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months-RC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Rated_Cost__c</fullName>
        <label>Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Revenue__c</fullName>
        <label>Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_months_margin_Per__c</fullName>
        <formula>IF(AND(Last_12_Month_Revenue__c != null,Last_12_Month_Revenue__c != 0) , 1-((Last_12_Month_Rated_Cost__c + Last_12_Month_Fixed_Cost__c) / Last_12_Month_Revenue__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_12_months_margin__c</fullName>
        <formula>IF((Last_12_Month_Revenue__c - ( Last_12_Month_Rated_Cost__c + Last_12_Month_Fixed_Cost__c )) &gt; 0,
   (Last_12_Month_Revenue__c - ( Last_12_Month_Rated_Cost__c + Last_12_Month_Fixed_Cost__c )), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 12 Months - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_FC__c</fullName>
        <formula>IF(AND(Life_to_Date_Fix_Cost__c != null,Life_to_Date_Revenues__c != null,Life_to_Date_Fix_Cost__c != 0,Life_to_Date_Revenues__c != 0) , Life_to_Date_Fix_Cost__c / Life_to_Date_Revenues__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - FC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Fix_Cost__c</fullName>
        <formula>Company_Name__r.Life_to_Date_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Fixed_Cost__c</fullName>
        <label>Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Margin_Per__c</fullName>
        <formula>IF(AND(Life_to_Date_Revenues__c != null,Life_to_Date_Revenues__c != 0) , 1-(( Life_to_Date_Fix_Cost__c +  Life_to_Date_Rate_Cost__c )/ Life_to_Date_Revenues__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Margin__c</fullName>
        <formula>IF((Life_to_Date_Revenues__c - ( Life_to_Date_Rate_Cost__c + Life_to_Date_Fix_Cost__c ))&gt;0,
   (Life_to_Date_Revenues__c - ( Life_to_Date_Rate_Cost__c + Life_to_Date_Fix_Cost__c )), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_RC__c</fullName>
        <formula>IF(AND(Life_to_Date_Rate_Cost__c != null,Life_to_Date_Revenues__c != null,Life_to_Date_Rate_Cost__c != 0,Life_to_Date_Revenues__c != 0) , Life_to_Date_Rate_Cost__c / Life_to_Date_Revenues__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - RC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Rate_Cost__c</fullName>
        <formula>Company_Name__r.Life_to_Date_Rated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Rated_Cost__c</fullName>
        <label>Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Revenue__c</fullName>
        <label>Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Revenues__c</fullName>
        <formula>Company_Name__r.Life_to_Date_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Business_Day__c</fullName>
        <formula>CASE(
MOD(Request_Date__c - DATE(1900, 1, 8), 7),
0, Request_Date__c + 1,
1, Request_Date__c + 1,
2, Request_Date__c + 1,
3, Request_Date__c + 1,
4, Request_Date__c + 3,
5, Request_Date__c + 2,
6, Request_Date__c + 1,
DATE(9999,01,01))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Business Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_deck_be_required_del__c</fullName>
        <label>Presentation deck be required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Month_Fixed_Cost__c</fullName>
        <formula>Company_Name__r.RPM_Last_12_Months_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Month_Rated_Cost__c</fullName>
        <formula>Company_Name__r.RPM_Last_12_Months_Rated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Month_Revenue__c</fullName>
        <formula>Company_Name__r.RPM_Last_12_Months_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_FC__c</fullName>
        <formula>IF(RPM_Last_12_Month_Revenue__c!=0, RPM_Last_12_Month_Fixed_Cost__c /  RPM_Last_12_Month_Revenue__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 Months-FC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Fixed_Cost__c</fullName>
        <label>RPM - Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_RC__c</fullName>
        <formula>IF(RPM_Last_12_Month_Revenue__c!=0, RPM_Last_12_Month_Rated_Cost__c /  RPM_Last_12_Month_Revenue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 Months-RC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Rated_Cost__c</fullName>
        <label>RPM - Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Revenue__c</fullName>
        <label>RPM - Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_months_margin_Per__c</fullName>
        <formula>IF(RPM_Last_12_Month_Revenue__c !=0, (1-(( RPM_Last_12_Month_Fixed_Cost__c + RPM_Last_12_Month_Rated_Cost__c )/ RPM_Last_12_Month_Revenue__c )
), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 months margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_months_margin__c</fullName>
        <formula>RPM_Last_12_Month_Revenue__c - ( RPM_Last_12_Month_Fixed_Cost__c +  RPM_Last_12_Month_Rated_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Last 12 months - margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_FC__c</fullName>
        <formula>IF(RPM_Life_to_Date_Revenues__c!=0, RPM_Life_to_Date_Fix_Cost__c /  RPM_Life_to_Date_Revenues__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - FC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Fix_Cost__c</fullName>
        <formula>Company_Name__r.RPM_Life_to_Date_Fixed_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Fixed_Cost__c</fullName>
        <label>RPM - Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Margin_Per__c</fullName>
        <formula>IF(RPM_Life_to_Date_Revenues__c!=0, (1-(( RPM_Life_to_Date_Fix_Cost__c + RPM_Life_to_Date_Rate_Cost__c )/ RPM_Life_to_Date_Revenues__c )
), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Margin__c</fullName>
        <formula>RPM_Life_to_Date_Revenues__c - ( RPM_Life_to_Date_Fix_Cost__c +  RPM_Life_to_Date_Rate_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_RC__c</fullName>
        <formula>IF(RPM_Life_to_Date_Revenues__c!=0, RPM_Life_to_Date_Rate_Cost__c /  RPM_Life_to_Date_Revenues__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - RC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Rate_Cost__c</fullName>
        <formula>Company_Name__r.RPM_Life_to_Date_Rated_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Rated_Cost__c</fullName>
        <label>RPM - Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Revenue__c</fullName>
        <label>RPM - Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Revenues__c</fullName>
        <formula>Company_Name__r.RPM_Life_to_Date_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPM - Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Visit Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ryder_Objective__c</fullName>
        <label>WHAT is Ryder’s objective(s)?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Active_Vehicles__c</fullName>
        <formula>Company_Name__r.Total_Active_Vehicles__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Active Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_will_approve_the_presentation_deck__c</fullName>
        <label>Who will approve the presentation deck?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_will_build_the_presentation_deck__c</fullName>
        <label>Who will build the presentation deck?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>HQ Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request_Date__c</columns>
        <columns>Company_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>HQ Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HQ Visits</pluralLabel>
    <recordTypes>
        <fullName>Executive_Visit</fullName>
        <active>true</active>
        <description>Control the process to schedule customers and prospects visits to HQ.</description>
        <label>Executive Visit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Describe_Reason_for_Declined</fullName>
        <active>true</active>
        <description>If Status is Declined Describe Reason</description>
        <errorConditionFormula>ISPICKVAL(Status__c,&quot;Declined&quot;)
&amp;&amp; ISBLANK(Describe_Reason_for_Declined__c)</errorConditionFormula>
        <errorDisplayField>Describe_Reason_for_Declined__c</errorDisplayField>
        <errorMessage>Describe Reason for Declined</errorMessage>
    </validationRules>
</CustomObject>